--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ Django==5.2.7
 djangorestframework==3.16.1
 pillow==12.0.0
 psycopg2-binary==2.9.11
+python-dotenv==1.2.1
 qrcode==8.2
 sqlparse==0.5.3
