--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
           python manage.py migrate
           python manage.py collectstatic --noinput
           sudo systemctl restart uwsgi
-          sudo systemctl reload nginx
+          echo "Deployment completed successfully at $(date)"
